syntax = "proto3";

option go_package = "github.com/noonyuu/grpc-graphql/grpc/pb";

package pb;

service UserService {
  rpc GetUsers(GetUsersParams) returns (UserList) {}
  rpc CreateUser(CreateUserParams) returns (User) {}
  rpc UpdateUser(UpdateUserParams) returns (User) {}
}

message GetUsersParams {}

message CreateUserParams {
  string name = 1;
  int64 age = 2;
}

message UpdateUserParams {
  string id = 1;
  string name = 2;
  int64 age = 3;
}

message User {
  string id = 1;
  string name = 2;
  int64 age = 3;
}

message UserList { repeated User users = 1; }

